examples/html/edit-style.css
/* ... */
@font-face {
    font-family: HiFi-Glyphs;
    src: url(../../resources/fonts/hifi-glyphs.ttf),
         url(../../fonts/hifi-glyphs.ttf),
         url(../../interface/resources/fonts/hifi-glyphs.ttf);
}

* {
    margin: 0;
    padding: 0;
}

body {
    padding: 24px 12px 24px 12px;

    color: #afafaf;
    background-color: #404040;
    font-family: Raleway-Regular;
    font-size: 15px;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}


table {
    font-family: FiraSans-SemiBold;
    font-size: 15px;
    color: #afafaf;
    border-collapse: collapse;
    width: 100%;
    border: 2px solid #575757;
    border-radius: 7px;
}

thead {
    font-family: Raleway-Regular;
    font-size: 12px;
    text-transform: uppercase;
    background-color: #1c1c1c;
    padding: 1px 0px;
    border-bottom: 1px solid #575757;
    width: 100%;
}

tbody {
    width: 100%;
}

tfoot {
    font-family: Raleway-Light;
    font-size: 13px;
    background-color: #1c1c1c;
    border-top: 1px solid #575757;
    width: 100%;
}

tfoot tr {
    background-color: #1c1cff;
}

thead tr {
    height: 26px;  /* 28px with thead padding */
}

thead th {
    height: 26px;
    background-color: #1c1c1c;
    border-right: 1px solid #575757;
}

thead th:last-child {
    border: none;
}

tbody td {
    height: 26px;
}

tfoot td {
    height: 18px;
    width: 100%;
    background-color: #1c1c1c;
    margin-left: 12px;
}

tr {
    width: 100%;
    cursor: pointer;
}

tr:nth-child(odd) {
    background-color: #2e2e2e;
}

tr:nth-child(even) {
    background-color: #1c1c1c;
}

tr:focus {
    outline: none;
}

tr.selected {
    color: #000000;
    background-color: #00b4ef;
}

th {
    text-align: center;
    word-wrap: nowrap;
    white-space: nowrap;
    padding-left: 12px;
    padding-right: 12px;
}

td {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    word-wrap: nowrap;
    padding-left: 12px;
    padding-right: 12px;
}

td.url {
    white-space: nowrap;
    overflow: hidden;
}


input[type="text"], input[type="number"], textarea {
    margin: 0;
    padding: 0 12px;
    color: #afafaf;
    background-color: #252525;
    border: none;
    font-family: FiraSans-SemiBold;
    font-size: 15px;
}

textarea {
    font-family: AnonymousPro-Regular;
    font-size: 16px;
    padding-top: 5px;
    padding-bottom: 5px;
    min-height: 64px;
    width: 100%;
    resize: vertical;
}

input::-webkit-input-placeholder {
    font-style: italic;
}

input:focus, textarea:focus {
    color: #fff;
    background-color: #000;
    outline: 1px solid #00b4ef;
    outline-offset: -1px;
}

input::selection, textarea::selection {
    color: #000000;
    background-color: #00b4ef;
}

input.search {
    border-radius: 14px;
}

input:disabled, textarea:disabled {
    background-color: #383838;
    color: #afafaf;
}

input[type="text"] {
    height: 28px;
    width: 100%;
}

input[type="number"] {
    position: relative;
    height: 28px;
    width: 124px;
}

input[type=number] {
    padding-right: 3px;
}
input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    opacity: 1.0;
    display: block;
    position: relative;
    width: 10px;
    overflow: hidden;
    font-family: hifi-glyphs;
    font-size: 50px;
    color: #afafaf;
    cursor: pointer;
    /*background-color: #000000;*/
}
input[type=number]::-webkit-inner-spin-button:before,
input[type=number]::-webkit-inner-spin-button:after {
    position:absolute;
    left: -21px;
    line-height: 8px;
    text-align: center;
}
input[type=number]::-webkit-inner-spin-button:before {
    content: "6";
    top: 5px;
}
input[type=number]::-webkit-inner-spin-button:after {
    content: "5";
    bottom: 6px;
}
input[type="number"]::-webkit-inner-spin-button:hover {
    color: #ffffff;
}

input.no-spin::-webkit-outer-spin-button,
input.no-spin::-webkit-inner-spin-button {
    display: none;
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
    padding-right: 12px;
}

input[type=button] {
    font-family: Raleway-Bold;
    font-size: 13px;
    text-transform: uppercase;
    vertical-align: top;
    height: 28px;
    min-width: 120px;
    padding: 0px 12px;
    margin-right: 8px;
    border-radius: 5px;
    border: none;
    color: #fff;
    background-color: #000;
    background: linear-gradient(#343434 20%, #000 100%);
    cursor: pointer;
}

input[type=button].glyph {
    font-family: HiFi-Glyphs;
    font-size: 20px;
    text-transform: none;
    min-width: 32px;
    padding: 0;
}

input[type=button].red {
    color: #fff;
    background-color: #94132e;
    background: linear-gradient(#d42043 20%, #94132e 100%);
}
input[type=button].blue {
    color: #fff;
    background-color: #94132e;
    background: linear-gradient(#00b4ef 20%, #1080b8 100%);
}

input[type=button]:enabled:hover {
    background: linear-gradient(#000, #000);
    border: none;
}
input[type=button].red:enabled:hover {
    background: linear-gradient(#d42043, #d42043);
    border: none;
}
input[type=button].blue:enabled:hover {
    background: linear-gradient(#00b4ef, #00b4ef);
    border: none;
}

input[type=button]:active {
    background: linear-gradient(#343434, #343434);
}
input[type=button].red:active {
    background: linear-gradient(#94132e, #94132e);
}
input[type=button].blue:active {
    background: linear-gradient(#1080b8, #1080b8);
}

input[type=button]:disabled {
    color: #252525;
    background: linear-gradient(#575757 20%, #252525 100%);
}

input[type=checkbox] {
    display: none;
}
/* ... */

